Docker_Kubernetes/production/zabbix/zabbix-server-mysql.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: zabbix-server-mysql
  namespace: default
  labels:
    app: zabbix-server-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-server-mysql
  template:
    metadata:
      labels:
        app: zabbix-server-mysql
    spec:
      securityContext:
        fsGroup: 1000
        sysctls:
        - name: net.ipv4.ip_local_port_range
          value: "1024 65000"
      containers:
      - name: zabbix-server-mysql
        image: zabbix/zabbix-server-mysql:centos-4.4.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: mailsender
          mountPath: /usr/lib/zabbix/alertscripts
        ports:
        - containerPort: 10051
          protocol: TCP
        resources:
          limits:
            cpu: "4"
            memory: 12Gi
          requests:
            cpu: "4"
            memory: 12Gi
      volumes:
        - name: mailsender
          configMap:
            name: mcmailsender
            defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-mysql
  labels:
    app: zabbix-server-mysql
spec:
  selector:
    app: zabbix-server-mysql
  ports:
  - protocol: TCP
    port: 10051
    nodePort: 30051
  type: NodePort
